# bincode2-sgx

./: .gitignore  .travis.yml  Cargo.toml  readme.md
examples/: basic.rs
src/: config.rs  internal.rs  lib.rs
src/de/: mod.rs  read.rs
src/ser/: mod.rs
tests/: test.rs
