[package]
name = "bincode2"
version = "2.0.1" # remember to update html_root_url
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>"]
exclude = ["logo.png", "examples/*", ".gitignore", ".travis.yml"]
publish =  true

repository = "https://github.com/pravega/bincode2"
documentation = "https://docs.rs/bincode2"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"

[dependencies]
byteorder = "1.3.2"
serde = "1.0.104"

[dev-dependencies]
serde_bytes = "0.11.3"
serde_derive = "1.0.104"
